// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRssXml > emits exactly one <item> for a single-issue feed 1`] = `
"<?xml version="1.0" encoding="UTF-8" ?>
<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
  <channel>
    <title>This Week in Neovim</title>
    <link>https://thisweekinneovim.org</link>
    <atom:link href="https://thisweekinneovim.org/feed.xml" rel="self" type="application/rss+xml" />
    <description>A weekly roundup of new and updated Neovim plugins, ecosystem news, and notable community posts.</description>
    <language>en-US</language>
    <lastBuildDate>Mon, 02 Feb 2026 00:00:00 GMT</lastBuildDate>
    <item>
      <title>Newest issue</title>
      <link>https://thisweekinneovim.org/issues/2026-02-02/</link>
      <guid isPermaLink="true">https://thisweekinneovim.org/issues/2026-02-02/</guid>
      <pubDate>Mon, 02 Feb 2026 00:00:00 GMT</pubDate>
      <description>Latest summary.</description>
    </item>
  </channel>
</rss>
"
`;

exports[`buildRssXml > matches snapshot structure (latin-only, no whitespace flake risk) 1`] = `
"<?xml version="1.0" encoding="UTF-8" ?>
<rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
  <channel>
    <title>This Week in Neovim</title>
    <link>https://thisweekinneovim.org</link>
    <atom:link href="https://thisweekinneovim.org/feed.xml" rel="self" type="application/rss+xml" />
    <description>A weekly roundup of new and updated Neovim plugins, ecosystem news, and notable community posts.</description>
    <language>en-US</language>
    <lastBuildDate>Mon, 02 Feb 2026 00:00:00 GMT</lastBuildDate>
    <item>
      <title>Newest issue</title>
      <link>https://thisweekinneovim.org/issues/2026-02-02/</link>
      <guid isPermaLink="true">https://thisweekinneovim.org/issues/2026-02-02/</guid>
      <pubDate>Mon, 02 Feb 2026 00:00:00 GMT</pubDate>
      <description>Latest summary.</description>
    </item>
    <item>
      <title>Middle &lt;issue&gt; &amp; friends</title>
      <link>https://thisweekinneovim.org/issues/2026-01-26/</link>
      <guid isPermaLink="true">https://thisweekinneovim.org/issues/2026-01-26/</guid>
      <pubDate>Mon, 26 Jan 2026 00:00:00 GMT</pubDate>
      <description>It&#39;s middle&#39;s summary.</description>
    </item>
    <item>
      <title>Oldest &quot;issue&quot;</title>
      <link>https://thisweekinneovim.org/issues/2026-01-19/</link>
      <guid isPermaLink="true">https://thisweekinneovim.org/issues/2026-01-19/</guid>
      <pubDate>Mon, 19 Jan 2026 00:00:00 GMT</pubDate>
      <description>Oldest summary.</description>
    </item>
  </channel>
</rss>
"
`;
